--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,4 @@
 <h1>StaticPages#index</h1>
 <p>Find me in app/views/static_pages/index.html.erb</p>
-
-<%= link_to 'Patients', patients_path %>
+<!--<p><%= @message %></p>-->
+<%= link_to 'Manage Blood Groups', blood_groups_path %>
