Added standard search times and made medication section look pretty but still a bit more to do

--- a/app/views/medications/_form.html.erb
+++ b/app/views/medications/_form.html.erb
@@ -15,6 +15,11 @@
     <%= f.label :medication %><br>
     <%= f.text_field :medication %>
   </div>
+  
+  <div class="field">
+    <%= f.label :format %><br>
+    <%= f.text_field :format %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
