--- a/app/views/medications/index.html.erb
+++ b/app/views/medications/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Medication</th>
       <th>Formulated Name</th>
-      <!--<th>Contains</th>-->
+      <th>Format</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,7 +17,7 @@
       <tr>
         <td><%= medication.medication %></td>
         <td><%= medication.formulatedName %></td>
-        <!--<td><%= medication.contains %></td>-->
+        <td><%= medication.format %></td>
         <td><%= link_to 'Show', medication %></td>
         <td><%= link_to 'Edit', edit_medication_path(medication) %></td>
         <td><%= link_to 'Destroy', medication, method: :delete, data: { confirm: 'Are you sure?' } %></td>
