--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -6,7 +6,7 @@
   </div>
 <% end %>
 <!--Patient details-->
-<div class="col-md-12 border">
+<div class="col-md-12">
   <p>
     <strong>Name:</strong>
     <%= @patient.fullname %>
