added testing, I think

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, 'healthy-rails' %>
 <h1>StaticPages#index</h1>
 <p>Find me in app/views/static_pages/index.html.erb</p>
 <!--<p><%= @message %></p>-->
