patients are now ordered in alphabetical order, will display patients as card-deck if less than 5 patients itherwise it looks daft

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -3,7 +3,11 @@
 <%= link_to 'New Patient', new_patient_path %>
 <br>
 <h1>Listing Patients</h1>
-<div class="card-columns">
+<% if @patients.count < 5 %>
+  <div class="card-deck">
+<% else %>
+  <div class="card-columns">
+<% end %>
   <% @patients.each do |patient| %>
   <div class="card">
     <div class="card-body">
