can now filter vitals by patient

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -2,7 +2,7 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Patient', new_patient_path %>
 <br>
-<h1>Listing Patients</h1>
+<h1 class="text-center">Listing Patients</h1>
 <% if @patients.count < 5 %>
   <div class="card-deck">
 <% else %>
