updated controllers and views for stats so that a default patient can be passed to populate the patient field. added link on show patient to get to the new views

--- a/app/views/blood_pressures/_form.html.erb
+++ b/app/views/blood_pressures/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :patient_id %><br>
-    <%= collection_select(:blood_pressure, :patient_id, Patient.all, :id, :fullname, prompt: true) %>
+    <%= collection_select(:blood_pressure, :patient_id, Patient.all, :id, :fullname, selected: @patient, prompt: true) %>
   </div>
   <div class="field">
     <%= f.label :systolic %><br>
