--- a/app/views/temperatures/show.html.erb
+++ b/app/views/temperatures/show.html.erb
@@ -16,4 +16,5 @@
 </p>
 
 <%= link_to 'Edit', edit_temperature_path(@temperature) %> |
-<%= link_to 'Back', temperatures_path %>
+<%= link_to 'Back', temperatures_path %> |
+<%= link_to 'To Patient', ('/patients/' + @pulse.patient_id.to_s) %>
