--- a/app/views/temperatures/_form.html.erb
+++ b/app/views/temperatures/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :patient_id %><br>
-    <%= collection_select(:temperature, :patient_id, Patient.all, :id, :fullname, prompt: true) %>
+    <%= collection_select(:temperature, :patient_id, Patient.all, :id, :fullname, selected: @patient, prompt: true) %>
   </div>
   <div class="field">
     <%= f.label :temperature %><br>
